--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <header>
     <div style="display: flex; align-items: center;">
-        <img src="assets/logo.png" alt="SD Foam Industries Logo" />
+        <img src="assets/logo.png.jpeg" alt="SD Foam Industries Logo" />
         <h1>S D Foam Industries</h1>
     </div>
     <nav>
@@ -120,21 +120,21 @@
     </nav>
 </header>
 
-<section id="home" class="active" style="background-image: url('assets/background_home.jpg');">
+<section id="home" class="active" style="background-image: url('assets/background_home.jpg.jpg');">
     <div class="content-box">
         <h2>Welcome to SD Foam Industries</h2>
         <p>We are a leading manufacturer of high-quality PU foam and mattresses, providing comfort and durability for your perfect sleep. Our products are trusted across India for their exceptional quality and performance. Explore our range and experience the difference.</p>
     </div>
 </section>
 
-<section id="about" style="background-image: url('assets/background_about.jpg');">
+<section id="about" style="background-image: url('assets/background_about.jpg.jpg');">
     <div class="content-box">
         <h2>About Us</h2>
         <p>SD Foam Industries specializes in premium PU foam and mattress manufacturing. Our foam products are crafted with advanced technology, ensuring superior comfort, breathability, and long-lasting support. Whether you need foam for home furniture, industrial use, or luxury bedding, we deliver quality that exceeds expectations.</p>
     </div>
 </section>
 
-<section id="services" style="background-image: url('assets/background_services.jpg');">
+<section id="services" style="background-image: url('assets/background_services.jpg.jpg');">
     <div class="content-box">
         <h2>Our Services</h2>
         <ul>
@@ -147,21 +147,21 @@
     </div>
 </section>
 
-<section id="gallery" style="background-image: url('assets/background_gallery.jpg');">
+<section id="gallery" style="background-image: url('assets/background_gallery.jpg.jpeg');">
     <div class="content-box">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="assets/image1.jpg" alt="Gallery Image 1" />
-            <img src="assets/image2.jpg" alt="Gallery Image 2" />
-            <img src="assets/image3.jpg" alt="Gallery Image 3" />
-            <img src="assets/image4.jpg" alt="Gallery Image 4" />
-            <img src="assets/image5.jpg" alt="Gallery Image 5" />
+            <img src="assets/image1.jpg.jpeg" alt="Gallery Image 1" />
+            <img src="assets/image2.jpg.jpeg" alt="Gallery Image 2" />
+            <img src="assets/image3.jpg.jpeg" alt="Gallery Image 3" />
+            <img src="assets/image4.jpg.jpeg" alt="Gallery Image 4" />
+            <img src="assets/image5.jpg.jpeg" alt="Gallery Image 5" />
         </div>
-        <a href="assets/catalogue.pdf" class="pdf-link" target="_blank">Download Our Catalogue (PDF)</a>
+        <a href="assets/Catalogue.pdf" class="pdf-link" target="_blank">Download Our Catalogue (PDF)</a>
     </div>
 </section>
 
-<section id="contact" style="background-image: url('assets/background_contact.jpg');">
+<section id="contact" style="background-image: url('assets/background_contact.jpg.jpeg');">
     <div class="content-box contact-info">
         <h2>Contact Us</h2>
         <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
