--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
 </section>
 
-<section id="gallery" style="background-image: url('assets/background_gallery.jpg.jpeg');">
+<section id="gallery" style="background-image: url('assets/background_gallery.jpg.jpg');">
     <div class="content-box">
         <h2>Gallery</h2>
         <div class="gallery">
@@ -161,7 +161,7 @@
     </div>
 </section>
 
-<section id="contact" style="background-image: url('assets/background_contact.jpg.jpeg');">
+<section id="contact" style="background-image: url('assets/background_contact.jpg.jpg');">
     <div class="content-box contact-info">
         <h2>Contact Us</h2>
         <p><strong>Address:</strong> Mangala to Sahidawali Road, Village Mangala, Sirsa‑125055 (Haryana)</p>
